All issues fixed. Now assignment is complete

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
     <div id="root"></div>
     
       <!-- Added libraries (places) for Google map auto places -->
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAolXVBph__8LXk-JukgnxDUI4LPDQAsxQ&libraries=places&callback=initMap">
-    </script>
+    <!-- <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAolXVBph__8LXk-JukgnxDUI4LPDQAsxQ&libraries=places&callback=initMap" async defer>
+    </script> -->
+
   </body>
 </html>
